--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>
-        Write a title for your page here..
+        Paper White Baton Rouge
       </title>
     </head>
       <body>
