--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>
-        Paper White Baton Rouge
+        Paperwhite Baton Rouge
       </title>
     </head>
       <body>
