--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
       <body>
         <h1>Coming Soon!</h1>
+        <img class="thumbnail" src="https://placehold.it/550x350">
       </body>
   </html>
