--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
       <body>
         <h1>Coming Soon!</h1>
-        <img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51153457-e375eb00-1835-11e9-8de5-be161bb579e8.png/550x350">
+        <img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51153457-e375eb00-1835-11e9-8de5-be161bb579e8.png">
       </body>
   </html>
