--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <span class="title-bar-title">Mike Mikerson</span>
 </div>
 </div>
-<div class="callout primary">
+<div class="callout primary" style="background-color:darkseagreen;">
 <div class="row column">
-<h1>*~Paperwhite Stationery Boutique~*</h1>
+<h1 style="font-family:felipa;">Paperwhite Stationery Boutique</h1>
 <p class="lead">Cultivated for the Celebrated Word</p>
 </div>
 </div>
@@ -71,7 +71,7 @@
 </div>
 <div class="medium-6 columns">
 <h3>Contact Us!</h3>
-<p>How to contact....</p>
+<p>Please feel free to contact either of us via email at....</p>
 <ul class="menu">
 <li><a href="https://www.instagram.com/paperwhitebr/?hl=en">Instagram</a></li>
 <li><a href="https://www.facebook.com/Paperwhite-Stationery-Boutique-2202041343388313/?_rdr">Facebook</a></li>
