--- a/index.html
+++ b/index.html
@@ -7,84 +7,6 @@
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
-<div class="off-canvas-wrapper">
-<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
-<div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
-<div class="row column">
-<br>
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51225051-5e123980-190e-11e9-955b-98f6ff37935f.jpg">
-<h5>Our Mission</h5>
-<p>At Paperwhite Stationery Boutique we strive to bring creativity, style and expertise to the stationery industry
- with outstanding products, the highest integrity of standards and honesty.  Paperwhite is structured to allow
-  our clients to co-create one-of-a-kind invitations and other paper goods associated with special events
-   for a truly unforgettable experience.</p>
-</div>
-</div>
-<div class="off-canvas-content" data-off-canvas-content>
-<div class="title-bar hide-for-large">
-<div class="title-bar-left">
-<button class="menu-icon" type="button" data-open="my-info"></button>
-<span class="title-bar-title">Paperwhite Baton Rouge</span>
-</div>
-</div>
-<div class="callout primary" style="background-color:darkseagreen;">
-<div class="row column">
-<h1 style="font-family:felipa;">Paperwhite Stationery Boutique</h1>
-<p class="lead">Cultivated for the Celebrated Word</p>
-</div>
-</div>
-<div class="row small-up-2 medium-up-3 large-up-4">
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224639-826d1680-190c-11e9-8c1f-15eb100cb01c.png">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224685-b0525b00-190c-11e9-923f-131d6c686e3d.png">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224719-d11ab080-190c-11e9-93b1-9dd102b4a2a9.jpg">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224710-c5c78500-190c-11e9-8252-caade6df7bf4.png">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224669-9d3f8b00-190c-11e9-8b64-92e889659cd3.png">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224476-b8f66180-190b-11e9-8a9a-fc2879a1199d.png">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51224725-d972eb80-190c-11e9-8e16-23c69c99d79b.jpg">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/46693590/51225632-15a84b00-1911-11e9-811b-f91041f51742.jpg">
-</div>
-</div>
-<hr>
-<div class="row">
-<div class="medium-6 columns">
-<h3>About Us!</h3>
-<p>What started as a home-based business, hand-calligrapher, Kathryn Podorsky and long-time friend of over 15 years, Alisa Kennedy,
- have come together to begin a thriving new business.  As Kathryn's calligraphy business grew, she solicited the help
-  of Alisa for various jobs.  Alisa has aided in areas including bookkeeping, font designing, assembly and packaging of products, proofreading,
-   and various creative design work.  With over 10 years of retail and management experience, Alisa has a keen eye for detail and is talented
-    in spotting trend-setting merchandise.</p>
-</div>
-<div class="medium-6 columns">
-<h3>Contact Us!</h3>
-<p>Please feel free to contact either of us via email at....</p>
-<ul class="menu">
-<li><a href="https://www.instagram.com/paperwhitebr/?hl=en">Instagram</a></li>
-<li><a href="https://www.facebook.com/Paperwhite-Stationery-Boutique-2202041343388313/?_rdr">Facebook</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-<script>
-      $(document).foundation();
-    </script>
+ <p>Coming Soon!</p>
 </body>
 </html>
